--- a/index.html
+++ b/index.html
@@ -105,18 +105,7 @@
     $('form').submit(function(e) {
       e.preventDefault();
       if($('#emailsub').val().trim().length > 5) {
-
-        $.ajax({
-          url: "https://vermillion-chebakia-0b204a.netlify.app/rest/api",
-          type: "POST",
-          dataType: "JSON",
-          data: {
-            email: $('#emailsub').val().trim()
-          },
-          success: function(response) {
-            alert("Subscribed");
-          }
-        })        
+            location.href = "https://retrocaramel.netlify.app?e=" + $('#emailsub').val().trim();  
       }
     })
   </script>
